# darling-groff

./: CMakeLists.txt
groff/src/devices/grodvi/: CMakeLists.txt
groff/src/devices/grohtml/: CMakeLists.txt
groff/src/devices/grolbp/: CMakeLists.txt
groff/src/devices/grolj4/: CMakeLists.txt
groff/src/devices/grops/: CMakeLists.txt
groff/src/devices/grotty/: CMakeLists.txt
groff/src/libs/libbib/: CMakeLists.txt
groff/src/libs/libdriver/: CMakeLists.txt
groff/src/libs/libgroff/: CMakeLists.txt
groff/src/preproc/eqn/: CMakeLists.txt  eqn.cpp
groff/src/preproc/grn/: CMakeLists.txt  hdb.cpp  hgraph.cpp  hpoint.cpp  main.cpp
groff/src/preproc/html/: CMakeLists.txt
groff/src/preproc/pic/: CMakeLists.txt  pic.cpp
groff/src/preproc/refer/: CMakeLists.txt  label.cpp
groff/src/preproc/soelim/: CMakeLists.txt
groff/src/preproc/tbl/: CMakeLists.txt
groff/src/roff/groff/: CMakeLists.txt
groff/src/roff/troff/: CMakeLists.txt
groff/src/utils/addftinfo/: CMakeLists.txt
groff/src/utils/hpftodit/: CMakeLists.txt
groff/src/utils/indxbib/: CMakeLists.txt
groff/src/utils/lkbib/: CMakeLists.txt
groff/src/utils/lookbib/: CMakeLists.txt
groff/src/utils/pfbtops/: CMakeLists.txt
groff/src/utils/tfmtodit/: CMakeLists.txt
src/src/libs/libgroff/: getopt.c  getopt1.c
